some fixes and ISBN added
ISBN-10 is the same as ASIN if it's completely numeric

--- a/style.less
+++ b/style.less
@@ -9,6 +9,9 @@
         background-color: #efefef;
     }
 
+    div.amazon_isbn{
+        font-size: 90%;
+    }
 
     div.amazon_price{
         font-size: 85%;
