make the plugin work again (for now)
This now scrapes the amazon page directly. may break any time

--- a/style.less
+++ b/style.less
@@ -11,7 +11,8 @@
         background-color: #efefef;
     }
 
-    div.amazon_title {
+    div.amazon_title,
+    div.amazon_author {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
